[package]
name = "cuda-reflex"
version = "0.1.0"
edition = "2021"
description = "Biological reflex arcs — priority-based, deliberation suppression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-reflex"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
